# angryplanes-project

./: CMakeLists.txt  README.md  premake5.lua
resources/levels/: level_1.txt  level_2.txt  level_3.txt
src/: GUI.cpp  GUI.hpp  Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  box.cpp  box.hpp  buildable.hpp  buildingBlock.cpp  buildingBlock.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  gamelogick.cpp  gamelogick.hpp  level.cpp  level.hpp  main.cpp  playingGui.cpp  playingGui.hpp  projectile.hpp  readme.md
tests/: test.cpp  testBird.cpp  testBird.h
